--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,12 @@ main {
 .icon__container {
 	/* border: 5px solid green; */
 }
+.tooltip {
+	/* background-color: #e3f6f5; */
+}
+.notification {
+	background-color: #2c9d30;
+}
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
