--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
 }
 body {
 	background-color: var(--cream);
-	width: 100%;
+	/* width: 100%; */
 }
 nav {
 	/* border: 5px solid red; */
@@ -55,7 +55,7 @@ main {
 	/* background-color: #e3f6f5; */
 }
 .notification {
-	background-color: #2c9d30;
+	/* background-color: #2c9d30; */
 }
 .red__container {
 	/* border: 3px solid red; */
