--- a/styles/illustration.css
+++ b/styles/illustration.css
@@ -8,7 +8,7 @@ aside {
 }
 /* * * * HEADER * * * */
 .header {
-	background-color: #e3f6f5;
+	/* background-color: #e3f6f5; */
 	height: clamp(40px, 4vw, 50px);
 	position: relative;
 	border-radius: 8px 8px 0 0;
@@ -39,7 +39,6 @@ aside {
 }
 .screen,
 .header {
-	/* width: clamp(425px, 30vw, 470px); */
 	width: clamp(284px, 100%, 510px);
 	margin-left: auto;
 	margin-right: auto;
@@ -48,7 +47,7 @@ aside {
 .screen {
 	z-index: 1;
 	position: relative;
-	background-color: #e3f6f5;
+	/* background-color: #e3f6f5; */
 	height: clamp(270px, 26vw, 280px);
 	border-top: none;
 	border-radius: 0 0 8px 8px;
@@ -138,7 +137,6 @@ aside {
 	flex-wrap: wrap;
 	align-items: center;
 	flex-direction: column;
-	/* background-color: lemonchiffon; */
 	padding: 0;
 }
 .colorboxes {
@@ -154,13 +152,13 @@ aside {
 	margin: 4px;
 }
 .colorbox1 {
-	background-color: #8b6ce0;
+	/* background-color: #8b6ce0; */
 }
 .colorbox2 {
-	background-color: #bae8e8;
+	/* background-color: #bae8e8; */
 }
 .icon-container {
-	background-color: #ffe65f;
+	/* background-color: #ffe65f; */
 	border-radius: 4px;
 	display: flex;
 	justify-content: center;
@@ -197,10 +195,10 @@ aside {
 	border-radius: 8px;
 }
 .extras-circle1 {
-	background-color: #8b6ce0;
+	/* background-color: #8b6ce0; */
 }
 .extras-circle2 {
-	background-color: #ffe65f;
+	/* background-color: #ffe65f; */
 }
 
 /* * * * ANIMATIONS * * * */
@@ -219,7 +217,7 @@ aside {
 	transform: rotate(350deg);
 }
 .sun-outline {
-	background-color: #8b6ce0;
+	/* background-color: #8b6ce0; */
 	width: 80px;
 	height: 80px;
 	position: relative;
@@ -227,7 +225,7 @@ aside {
 	border-radius: 6px;
 	border: 2px solid #383833;
 }
-.sun-outline:before,
+/* .sun-outline:before,
 .sun-outline:after {
 	content: "";
 	position: absolute;
@@ -243,7 +241,7 @@ aside {
 }
 .sun-outline:after {
 	transform: rotate(60deg);
-}
+} */
 
 .sun-circle {
 	position: absolute;
@@ -254,7 +252,7 @@ aside {
 	width: 65px;
 	height: 65px;
 	border-radius: 50%;
-	background-color: #b09de3;
+	/* background-color: #b09de3; */
 	border: 2px solid #383833;
 }
 .eyes {
@@ -276,10 +274,10 @@ aside {
 	top: 48%;
 	left: 31%;
 	border-radius: 50%;
-	background-color: #8b6ce0;
+	/* background-color: #8b6ce0; */
 	opacity: 0.5;
 	z-index: 2;
-	box-shadow: 22px 0px 0px #8b6ce0;
+	/* box-shadow: 22px 0px 0px #8b6ce0; */
 }
 .smile {
 	position: absolute;
