--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,9 @@
 	--cream: #faebd7;
 	--light-gray: #f6f6f6;
 }
+.fontsList {
+	height: 100%;
+}
 body {
 	/* background-color: var(--cream); */
 	/* width: 100%; */
