--- a/styles/rangeslider.css
+++ b/styles/rangeslider.css
@@ -5,7 +5,7 @@ input[type="range"] {
 	appearance: none;
 	background: transparent;
 	cursor: pointer;
-	width: 10rem;
+	width: 6rem;
 }
 
 /* Removes default focus */
@@ -16,9 +16,9 @@ input[type="range"]:focus {
 /***** Chrome, Safari, Opera and Edge Chromium styles *****/
 /* slider track */
 input[type="range"]::-webkit-slider-runnable-track {
-	background-color: #e3e3e3;
+	background-color: #838388;
 	border-radius: 0.5rem;
-	height: 0.2rem;
+	height: 0.15rem;
 }
 
 /* slider thumb */
@@ -37,7 +37,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 input[type="range"]:focus::-webkit-slider-thumb {
 	border: 1px solid #838388;
-	outline: 3px solid #838388;
+	outline: 1px solid #838388;
 	outline-offset: 0.125rem;
 }
 
